# rich-pixels

./: .gitignore  LICENSE  README.md  pyproject.toml
rich_pixels/: __init__.py  _pixel.py  _renderer.py
tests/: test_pixel.py
tests/.sample_data/ascii/: rich_pixels.txt
tests/.sample_data/base64/: bulbasaur.txt
