[tool.poetry]
name = "rich-pixels"
version = "2.0.0"
description = "A Rich-compatible library for writing pixel images and ASCII art to the terminal."
authors = ["Darren Burns <darrenb900@gmail.com>"]
readme = "README.md"
packages = [{ include = "rich_pixels" }]
include = ["rich_pixels/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.0.0"
pillow = "^9.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.990"
syrupy = "^3.0.5"
importlib-metadata = "^5.0.0"
types-pillow = "^9.3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
