[project]
name = "rich-pixels"
version = "3.0.0"
description = "A Rich-compatible library for writing pixel images and ASCII art to the terminal."
authors = [
    { name = "Darren Burns", email = "darrenb900@gmail.com" }
]
dependencies = [
    "rich>=12.0.0",
    "pillow>=10.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.1.1",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "syrupy>=3.0.6",
    "types-pillow>=10.2.0.20240206",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rich_pixels"]